--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.525.0",
     "next": "15.3.4",
+    "openai": "^5.9.0",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
